--- a/pom.xml
+++ b/pom.xml
@@ -25,11 +25,11 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>11</java.version>
+        <java.version>1.8</java.version>
         <junit.version>4.12</junit.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
         <maven-source-plugin.version>3.1.0</maven-source-plugin.version>
         <jacoco-maven-plugin.version>0.8.4</jacoco-maven-plugin.version>
@@ -39,6 +39,7 @@
         <junit-jupiter.version>5.2.0</junit-jupiter.version>
         <spring-boot.version>2.0.4.RELEASE</spring-boot.version>
         <slf4j.version>1.7.26</slf4j.version>
+        <flyway.version>6.4.1</flyway.version>
     </properties>
 
     <dependencyManagement>
@@ -50,12 +51,12 @@
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>scraping</artifactId>
+                <artifactId>scraping-adapter</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>data</artifactId>
+                <artifactId>data-adapter</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
@@ -76,6 +77,7 @@
             <dependency>
                 <groupId>org.flywaydb</groupId>
                 <artifactId>flyway-core</artifactId>
+                <version>${flyway.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.h2database</groupId>
