--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -120,7 +120,7 @@
   "devDependencies": {
     "acorn-dynamic-import": "3.0.0",
     "imports-loader": "0.8.0",
-    "node-sass": "4.12.0",
+    "node-sass": "^4.14.1",
     "raw-loader": "0.5.1",
     "react-scripts-rewired": "3.0.1--latest1",
     "sass-loader": "7.1.0",
